--- a/as.css
+++ b/as.css
@@ -103,6 +103,7 @@ ul {
   font-weight: 400;
   border: 0;
   padding: 0;
+  text-shadow: 0px 1px 2px rgba(34, 34, 34, 0.28);
 }
 
 .h-link:hover, .h-link:active {
