Changed default color to white

--- a/as.css
+++ b/as.css
@@ -13,7 +13,7 @@ html {
   font-family: 'Lato', Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 1em;
-  color: #ddd;
+  color: #fff;
   background-color: #111;
   box-sizing: border-box;
 
