--- a/as.css
+++ b/as.css
@@ -71,13 +71,13 @@ ul {
 }
 
 ::-moz-selection {
-  color: #fff;
-  background-color: rgba(55, 218, 195, .99);
+  color: #000;
+  background-color: rgba(255, 255, 255, .99);
 }
 
 ::selection {
-  color: #fff;
-  background-color: rgba(55, 218, 195, .99);
+  color: #000;
+  background-color: rgba(255, 255, 255, .99);
 }
 
 .wrapper {
