--- a/as.css
+++ b/as.css
@@ -10,11 +10,11 @@ html, body, p, ul, li, div, span, h1, h2 {
 }
 
 html {
-  font-family: 'Lato', Arial, Helvetica, sans-serif;
+  font-family: 'Nunito Sans', Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 1em;
-  color: #fff;
-  background-color: #000;
+  color: #919191;
+  background-color: #141414;
   box-sizing: border-box;
 
   /* Only for mobile devices */
@@ -33,32 +33,34 @@ body {
 }
 
 a {
-  color: #fff;
-  font-weight: 400;
+  color: #999;
+  font-weight: 300;
   text-decoration: none;
   cursor: pointer;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #999;
 }
 
 a:hover, a:active {
+  color: #fff;
+  border-bottom-color: #fff;
   border-bottom-width: 2px;
 }
 
 strong {
-  font-weight: 400;
+  font-weight: 600;
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 1.5em;
+  font-weight: 600;
   margin: .625em 0;
+  letter-spacing: 0.02em;
 }
 
 h2 {
-  margin: 1.875em 0 .3125em;
-  font-size: .8125em;
-  color: #616161;
-  font-weight: 400;
-  text-transform: uppercase;
+  margin-top: 1.875em;
+  color: #fff;
+  font-weight: 300;
   letter-spacing: .05em;
 }
 
@@ -71,28 +73,26 @@ ul {
 }
 
 ::-moz-selection {
-  color: #000;
+  color: #141414;
   background-color: rgba(255, 255, 255, .99);
 }
 
 ::selection {
-  color: #000;
+  color: #141414;
   background-color: rgba(255, 255, 255, .99);
 }
 
 .wrapper {
   margin: 2.5rem 1.25rem;
-  max-width: 31.25rem; /* 500 / 16 (50 - 75 characters) */
+  max-width: 30rem; /* 480px (50 - 75 characters) */
 }
 
 
 /* Header */
 
 .h-link {
-  font-family: 'Alice', Georgia, serif;
-  font-weight: 400;
+  font-weight: 600;
   color: #fff;
-  display: inline-block;
   border: 0;
 }
 
@@ -116,20 +116,20 @@ ul {
 
 .social-item + .social-item::before {
   content: '\00b7';
-  color: #616161;
+  color: #fff;
   padding: 0 4px;
 }
 
 
 /* Media query */
 
-@media (min-width: 40.78125rem) { /* 652.5 / 16 */
+@media (min-width: 36.25rem) { /* 580 / 16 */
 
   html {
     font-size: 1.125em; /* 18 / 16 */
   }
 
   .wrapper {
-    margin: 2.5em;
+    margin: 10% auto;
   }
 }
