--- a/as.css
+++ b/as.css
@@ -53,7 +53,7 @@ strong {
 h1 {
   font-size: 1.5em;
   font-weight: 600;
-  margin: .625em 0;
+  margin-top: .625em;
   letter-spacing: 0.02em;
 }
 
@@ -61,7 +61,6 @@ h2 {
   margin-top: 1.875em;
   color: #fff;
   font-weight: 300;
-  letter-spacing: .05em;
 }
 
 p {
