--- a/as.css
+++ b/as.css
@@ -63,7 +63,7 @@ h2 {
   font-weight: 300;
 }
 
-p {
+p, section {
   margin-bottom: 1.25em;
 }
 
@@ -117,6 +117,7 @@ ul {
   content: '\00b7';
   color: #fff;
   padding: 0 4px;
+  font-weight: 600;
 }
 
 
