--- a/as.css
+++ b/as.css
@@ -71,6 +71,11 @@ ul {
   list-style: none;
 }
 
+del {
+  text-decoration: line-through;
+  opacity: .5;
+}
+
 ::-moz-selection {
   color: #141414;
   background-color: rgba(255, 255, 255, .99);
